doc: update code sample with Java 11 collection factories